[package]
name = "genpass"
version = "0.1.0"
edition = "2021"
description = "Passwords generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
nonzero_ext = "0.3.0"
rand = "0.8.5"
snafu = { version = "0.7.5", features = ["rust_1_61"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt"] }
